<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/ivFundo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".4"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/husky" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:alpha=".65"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivFundo"
        app:srcCompat="@drawable/logo" />

    <ScrollView
        android:id="@+id/scrVwLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintVertical_bias="0.396">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/retangulo_transp_branco"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                app:hintEnabled="false">

                <AutoCompleteTextView
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/elipse_branco"
                    android:drawableStart="@drawable/ic_alternate_email"
                    android:drawableLeft="@drawable/ic_alternate_email"
                    android:drawablePadding="5dp"
                    android:hint="E-Mail"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryDark">

                <AutoCompleteTextView
                    android:id="@+id/etSenha"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/elipse_branco"
                    android:drawableStart="@drawable/ic_senha"
                    android:drawableLeft="@drawable/ic_senha"
                    android:drawablePadding="5dp"
                    android:hint="Senha"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/cbLembrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:paddingLeft="5dp"
                android:text="@string/lembrar_me"
                android:textColor="@color/branco"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnLogar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/botao_arredondado_preto"
                android:text="@string/login"
                android:textColor="@color/branco"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRecuperarSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/esqueceu_senha"
                android:textAlignment="center"
                android:textColor="@color/branco"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/botao_arredondado_branco"
        android:text="@string/criar_conta"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="10sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/ivFundo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrVwLogin" />

</android.support.constraint.ConstraintLayout>